<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary400">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tertiary400"
        tools:context=".fragments.statement.vehicle_a.VehicleADriverFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_statement_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:text="@string/new_statement_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_statement_vehicle_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/statement_vehicle_a_title"
                android:textAllCaps="true"
                android:textColor="@color/primary800"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_outlined_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/statement_driver_title"
                    android:textAllCaps="true"
                    android:textColor="@color/primary800"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/statement_driver_description"
                    android:textColor="@color/primary800"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <CheckBox
                    android:id="@+id/cb_statement_vehicle_a_driver_is_policy_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/driver_is_policy_holder_checkbox"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_last_name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_first_name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_date_of_birth"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_date_of_birth_date_picker"
                    style="@style/PrimaryBottomRoundedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="-15dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_pick_date"
                    android:textSize="16sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_address"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_country"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_phone_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_email"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/label_driving_license_category"/>

                <Spinner
                    android:id="@+id/spin_statement_vehicle_a_driver_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_driving_license_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_driving_license_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_driving_license_expiration_date"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_driving_license_expiration_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_driving_license_expiration_date_picker"
                    style="@style/PrimaryBottomRoundedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="-15dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_pick_date"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_previous"
                    style="@style/SecondaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_back_button"
                    tools:ignore="ButtonStyle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_next"
                    style="@style/PrimaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_front_button"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</ScrollView>